tests/NormalTests/paczka1/fuzzy1/75543502.err
Error in line 1: A239 S896 52,84
Error in line 20: q8VAF A867 12,6
Error in line 29: q8VAF S896 72,7
Error in line 13: tBkHOmd4jw A867 94,2
Error in line 4: A239 S896 185,0
